# spkf

./: CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindEigen3.cmake
examples/: unicycle.cpp  unicycle.h
spkf/: cdkf.h  common.h  ekf.h  kf_base.h  sigma_base.h  sqrt_base.h  sqrt_cdkf.h  sqrt_ukf.h  ukf.h
